--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,10 +6,10 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    Loja Céu Azul<br />
+    Av. Fuad Lutfalla, 1441<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    (11)3921-1888
 </address>
 
 <address>
